--- a/app/screenshots.html
+++ b/app/screenshots.html
@@ -1,33 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FyreMC Staff Segéd - Screenshotok</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/navbar.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/screenshots.css">
     <script src="scripts/refresh.js" defer></script>
     <script src="scripts/screenshots.js" defer></script>
-  </head>
+    <script src="scripts/screenshots_filter.js" defer></script>
+</head>
 
-  <body>
+<body>
     <ul>
-      <li class="logo">FyreMC Staff Segéd</li>
-      <li><a href="index.html">Főoldal</a></li>
-      <li><a href="messages.html">Üzenetek</a></li>
-      <li><a class="active" href="screenshots.html">Screenshotok</a></li>
-      <li><a href="ticketcommands.html">Ticket parancsok</a></li>
-      <li><a href="permissions.html">Jogkörök</a></li>
-      <li><a href="swearings.html">Káromkodások</a></li>
-      <li><a href="debuglog.html">Debug log kereső</a></li>
+        <li class="logo">FyreMC Staff Segéd</li>
+        <li><a href="index.html">Főoldal</a></li>
+        <li><a href="messages.html">Üzenetek</a></li>
+        <li><a class="active" href="screenshots.html">Screenshotok</a></li>
+        <li><a href="ticketcommands.html">Ticket parancsok</a></li>
+        <li><a href="permissions.html">Jogkörök</a></li>
+        <li><a href="swearings.html">Káromkodások</a></li>
+        <li><a href="debuglog.html">Debug log kereső</a></li>
     </ul>
     <div class="content">
-      <p>Üdvözöllek a FyreMC Staff Segédben.</p>
-      <p>
-        A program tartalmaz olyan eszközöket, amelyek segíthetnek a staff
-        feladataid végzésében mint például a káromkodások vissza nézése.
-      </p>
+        <div class="info">
+            <h4 id="screenshots-count">Screenshotok</h4>
+            <p>
+                Tekintsd meg játékban készült képernyőképeidet. <br />A szűrő segítségével választhatsz dátumot, vagy az elmúlt X napban készülteket.
+                <br /> Amennyiben kimásolnád az egyiket, csak kattints arra rá.
+            </p>
+        </div>
+        <div class="controllers">
+            <h4 style="color: #2cc670; font-family: 'Lobster', cursive">
+                Szűrő:
+                <select style="cursor: pointer" name="filter-type" id="filter-type">
+            <option value="date">Dátum</option>
+            <option value="days">Napok</option>
+          </select>
+                <input style="display: block; width: 59px; margin-left: 45px" type="date" id="date-input" onchange="loadImages()" />
+                <input style="display: none; width: 56px; margin-left: 45px" value="5" type="number" id="days-input" placeholder="napok" onchange="loadImages()" />
+            </h4>
+            <h4 style="color: #2cc670; font-family: 'Lobster', cursive">
+                Elérési út:
+                <button id="path-selector" style="cursor: pointer;">Szerkesztés</button> <button style="cursor: pointer;" id="open-path">Megnyitás</button> <br>
+                <span style="font-family: none; font-size: 13px;" id="path-display"></span>
+            </h4>
+        </div>
+        <div class="screenshots-holder">
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
