--- a/app/ticketcommands.html
+++ b/app/ticketcommands.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,46 +12,44 @@
     <script src="scripts/refresh.js" defer></script>
     <script src="scripts/ticketcommands.js" defer></script>
     <script src="scripts/copy.js" defer></script>
-  </head>
+</head>
 
-  <body>
+<body>
     <ul>
-      <li class="logo">FyreMC Staff Segéd</li>
-      <li><a href="index.html">Főoldal</a></li>
-      <li><a href="messages.html">Üzenetek</a></li>
-      <li><a href="screenshots.html">Screenshotok</a></li>
-      <li><a class="active" href="ticketcommands.html">Ticket parancsok</a></li>
-      <li><a href="permissions.html">Jogkörök</a></li>
-      <li><a href="swearings.html">Káromkodások</a></li>
-      <li><a href="debuglog.html">Debug log kereső</a></li>
+        <li class="logo">FyreMC Staff Segéd</li>
+        <li><a href="index.html">Főoldal</a></li>
+        <li><a href="messages.html">Üzenetek</a></li>
+        <li><a href="screenshots.html">Screenshotok</a></li>
+        <li><a class="active" href="ticketcommands.html">Ticket parancsok</a></li>
+        <li><a href="permissions.html">Jogkörök</a></li>
+        <li><a href="swearings.html">Káromkodások</a></li>
+        <li><a href="debuglog.html">Debug log kereső</a></li>
     </ul>
     <div class="content">
-      <div class="info">
-        <h4>Ticket parancsok</h4>
-        <p>
-          Itt találhatod a ticketekben használandó parancsokat. <br />
-          Rákattintva valamelyikre kimásolhatod azt vágólapodra a könnyebb
-          használat érdekében.
-        </p>
-      </div>
-      <div class="categories">
-        <div class="default categories-holder">
-          <h4 class="categories-title">Alapok</h4>
+        <div class="info">
+            <h4>Ticket parancsok</h4>
+            <p>
+                Itt találhatod a ticketekben használandó parancsokat. <br /> Rákattintva valamelyikre kimásolhatod azt vágólapodra a könnyebb használat érdekében.
+            </p>
         </div>
-        <div class="name categories-holder">
-          <h4 class="categories-title">Név</h4>
+        <div class="categories">
+            <div class="default categories-holder">
+                <h4 class="categories-title">Alapok</h4>
+            </div>
+            <div class="name categories-holder">
+                <h4 class="categories-title">Név</h4>
+            </div>
+            <div class="client categories-holder">
+                <h4 class="categories-title">Kliens</h4>
+            </div>
+            <div class="other categories-holder">
+                <h4 class="categories-title">Egyéb</h4>
+            </div>
+            <div class="team categories-holder">
+                <h4 class="categories-title">Team Tagok</h4>
+            </div>
         </div>
-        <div class="client categories-holder">
-          <h4 class="categories-title">Kliens</h4>
-        </div>
-        <div class="other categories-holder">
-          <h4 class="categories-title">Egyéb</h4>
-        </div>
-        <div class="team categories-holder">
-          <h4 class="categories-title">Team Tagok</h4>
-        </div>
-      </div>
-      <span class="tooltiptext">Kattints a másoláshoz.</span>
     </div>
-  </body>
+</body>
+
 </html>
