--- a/app/index.html
+++ b/app/index.html
@@ -22,13 +22,10 @@
         <li><a href="permissions.html">Jogkörök</a></li>
         <li><a href="swearings.html">Káromkodások</a></li>
         <li><a href="debuglog.html">Debug log kereső</a></li>
-        <li><a href="debuglog.html">Játékos kereső</a></li>
+        <li><a href="playersearch.html">Játékos kereső</a></li>
     </ul>
     <div class="content">
         <p>Üdvözöllek a FyreMC Staff Segédben.</p>
-        <p>
-            A program tartalmaz olyan eszközöket, amelyek segíthetnek a staff feladataid végzésében mint például a káromkodások vissza nézése.
-        </p>
     </div>
     <div class="author">Ris#2928</div>
 </body>
