--- a/app/screenshots.html
+++ b/app/screenshots.html
@@ -12,6 +12,7 @@
     <script src="scripts/refresh.js" defer></script>
     <script src="scripts/screenshots.js" defer></script>
     <script src="scripts/screenshots_filter.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/copy-image-clipboard/dist/index.browser.js" defer></script>
 </head>
 
 <body>
